# flop-a-bird

./: CMakeLists.txt  README.md
.obsidian/: workspace.json
include/: backgroundimage.hpp  bird.hpp  birdimage.hpp  constants.hpp  gamemanager.hpp  pipe.hpp  pipeimage.h  pipemanager.hpp
src/: bird.cpp  gamemanager.cpp  main.cpp  pipe.cpp  pipemanager.cpp
